# substring-searcher

./: .clang-format  CMakeLists.txt  README.md  SubstringSearcher.hpp  boyer_mur_mur.cpp  knuta_morisa_prata.cpp  naiv_algorithm.cpp  Отчет Каримова-Кузнецов.docx
